--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 
 .App-header {
-  overflow: auto !important;
+  overflow: hidden;
   display: block;
   flex-direction: column;
   align-items: center;
@@ -42,18 +42,6 @@
   color: black !important;
 }
 
-.App-header::-webkit-scrollbar {
-  width: 2px;
-}
- 
-.App-header::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
-}
- 
-.App-header::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-}
 
 .App-link {
   color: #61dafb;
@@ -115,6 +103,10 @@
 
 .MuiPaper-root{
   background-color: rgb(23, 25, 36) !important;
+  border-bottom: 1px solid rgb(59, 57, 57);
+}
+
+.borderb{
   border-bottom: 1px solid rgb(59, 57, 57);
 }
 
@@ -204,6 +196,7 @@
   height: 10px;
   padding-left: 2px;
   padding-right: 2px;
+  margin-top: 8px;
 }
 .MuiFormLabel-root{
   color: white !important;
@@ -236,7 +229,9 @@
   overflow-wrap: break-word;
   color: rgb(151, 146, 146);
 }
+
 .rightbar{
+  z-index: 1;
   border-left: solid 1px rgb(68, 71, 77);
   position: fixed;
   height: 100%;
@@ -250,13 +245,36 @@
   position: sticky;
   top: 0;
   width: 100%;
-  background-color: rgb(23, 25, 36);
+  background-color: rgb(37, 40, 56);
   text-align: left;
-  padding-left: 30px;
+  padding-left: 15px;
+  padding-top: 5px;
+  height: 37px;
+  z-index: 0;
 }
 
 .rightpadding{
-  padding-right: 200px;
+  margin-right: 200px;
+  overflow: auto !important;
+  height: calc(100% - 4rem - 37px);
+}
+
+.rightpadding::-webkit-scrollbar {
+  width: 2px;
+}
+ 
+.rightpadding::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+}
+ 
+.rightpadding::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+
+.nopadding{
+  margin-right: 0px;
 }
 
 .ps-collapsed{
